...
    <string name="menu_action_activity_log_show_all">Show all</string>
    <string name="menu_action_activity_log_hide_successful">Hide successful</string>
    <string name="text_activity_log_list_item_log_entry_no_log">No logs present for %s</string>
    <string name="text_activity_log_list_item_log_entry_title">Log entry for %s</string>
    <string name="text_activity_log_list_item_log_entry_success">Execution %s</string>
    <string name="text_activity_log_list_item_log_entry_timestamp">Timestamp: %s</string>
    <string name="text_activity_log_list_item_log_entry_message">Message: %s</string>
</resources>
