<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_dialog_general_error"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearlayout_dialog_general_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_general_message_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_general_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/textview_dialog_general_message_title_margin_bottom"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="" />

        <TextView
            android:id="@+id/textview_dialog_general_message_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_dialog_general_message_donotshowagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:buttonTint="@drawable/checkbox_selector"
            android:text="@string/label_dialog_general_message_donotshowagain"
            android:textColor="@color/textColor" />

        <ImageView
            android:id="@+id/imageview_dialog_general_message_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/imageview_dialog_general_message_ok_padding_top"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_general_message_ok"
            app:srcCompat="@drawable/icon_ok_selector" />
    </LinearLayout>
</ScrollView>